# ros2-vision-navigator

./: .gitignore  README.md  requirements.txt
ros2_ws/src/vision_navigator/: package.xml  setup.cfg  setup.py
ros2_ws/src/vision_navigator/vision_navigator/: camera_node.py  detector_node.py  navigator_node.py
scripts/: download_model.py  generate_test_images.py
